# STL_helper_functions_library

./: .gitignore  CMakeLists.txt  Makefile  README.md  STL_Helper_Utility_Functions_Test_Ex1.sln  STL_Helper_Utility_Functions_Test_Ex1.vcxproj  STL_Helper_Utility_Functions_Test_Ex1.vcxproj.filters  STL_helper_functions_library.sln  catch.hpp  stl_helper_functions.cpp  stl_helper_functions.hpp  test_main.cpp
STL_helper_functions_library_v1/: STL_helper_functions_library_v1.vcxproj  STL_helper_functions_library_v1.vcxproj.filters  catch.hpp  stl_helper_functions.cpp  stl_helper_functions.hpp  test_main.cpp
include/: catch.hpp  stl_helper_functions.hpp
include/detail/: stl_helper_functions_impl.hpp
includes/: catch.hpp
src/: stl_helper_functions.cpp  stl_helper_functions.hpp
tests/: main_catch_tests.cpp  main_google_tests.cpp  test_main.cpp
